# Open3D-RealityModeling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  submodule.sh
cpp/open3d/: CMakeLists.txt  Open3D.h.in
cpp/pybind/: pybind_utils.cpp
docs/: Doxyfile  getting_started.rst
examples/Cpp/: CMakeLists.txt  TSDFBundleAdjustment.cpp
examples/Cuda/: CMakeLists.txt
examples/Cuda/ReconstructionSystem/: CMakeLists.txt  DatasetConfig.h  IntegrateScene.h  MakeFragments.h  ORBPoseEstimation.h  RefineRegistration.h  RegisterFragments.h  RunSystem.cpp  ViewFragments.cpp  ViewPoseGraph.cpp
examples/Cuda/ReconstructionSystem/config/bundlefusion/: apt0.json
examples/Cuda/ReconstructionSystem/config/intel/: test.json
examples/Cuda/ReconstructionSystem/config/intrinsics/: camera_azure_kinect.json
examples/Cuda/ReconstructionSystem/config/stanford/: lounge.json
examples/Cuda/ReconstructionSystem/debug/: CMakeLists.txt  DebugMakeFragments.cpp  DebugRGBDOdometry.cpp  DebugRegisterFragments.cpp
examples/Cuda/ReconstructionSystem/profile/: ProfileColoredICP.cpp  ProfileFGR.cpp  ProfileIntegration.cpp  ProfileRGBDOdometry.cpp  VisualizeModels.cpp
examples/cpp/: CMakeLists.txt  RegistrationRANSAC.cpp  TIntegrateRGBDDebug.cpp
src/: CMakeLists.txt  Open3DConfig.cmake.in
src/AdvancedRendering/Visualization/Visualizer/: VisualizerPBR.h
src/Cuda/: CMakeLists.txt  Open3DCuda.h  Open3DCudaConfig.cmake.in  README.md
src/Cuda/Camera/: PinholeCameraIntrinsicCuda.h
src/Cuda/Common/: HelperCuda.h  JacobianCuda.h  LinearAlgebraCuda.h  TransformCuda.h  UtilsCuda.h
src/Cuda/Container/: Array2DCudaHost.hpp  ArrayCudaHost.hpp  HashTableCudaDevice.cuh  HashTableCudaHost.hpp  LinkedListCudaHost.hpp  MemoryHeapCuda.h  MemoryHeapCudaHost.hpp
src/Cuda/Experiment/: ScalableTSDFVolumeProcessorCuda.h  ScalableTSDFVolumeProcessorCudaHost.hpp  ScalableVolumeRegistrationCuda.h  ScalableVolumeRegistrationCudaDevice.cuh  ScalableVolumeRegistrationCudaHost.hpp
src/Cuda/Geometry/: ImageCuda.h  ImageCudaDevice.cuh  ImageCudaHost.hpp  ImageCudaKernel.cuh  InstantiateGeometry.cpp  InstantiateGeometry.cu  PointCloudCuda.h  PointCloudCudaHost.hpp  PointCloudCudaKernel.cuh  RGBDImageCuda.h  RGBDImageCudaHost.hpp  SegmentationCuda.h  SegmentationCudaHost.hpp  SegmentationCudaKernel.cuh  TriangleMeshCuda.h  TriangleMeshCudaHost.hpp
src/Cuda/IO/ClassIO/: ScalableTSDFVolumeCudaIO.cpp  ScalableTSDFVolumeCudaIO.h  UniformTSDFVolumeCudaIO.cpp  UniformTSDFVolumeCudaIO.h  ZlibIO.h
src/Cuda/Integration/: .#RGBDToTSDF.cpp  InstantiateIntegration.cpp  InstantiateIntegration.cu  RGBDToTSDF.cpp  RGBDToTSDF.h  RGBDToTSDFKernel.cuh  ScalableMeshVolumeCuda.h  ScalableMeshVolumeCudaDevice.cuh  ScalableMeshVolumeCudaHost.hpp  ScalableMeshVolumeCudaKernel.cuh  ScalableTSDFVolumeCuda.h  ScalableTSDFVolumeCudaDevice.cuh  ScalableTSDFVolumeCudaHost.hpp  ScalableTSDFVolumeCudaKernel.cuh  UniformMeshVolumeCuda.h  UniformMeshVolumeCudaHost.hpp  UniformTSDFVolumeCuda.h  UniformTSDFVolumeCudaDevice.cuh  UniformTSDFVolumeCudaHost.hpp  UniformTSDFVolumeCudaKernel.cuh
src/Cuda/OSLAMUtils/: InstantiateUtils.cu  InstantitateUtils.cpp  SegmentationCuda.h  SegmentationCudaHost.hpp  SegmentationCudaKernel.cuh
src/Cuda/Odometry/: InstantiateOdometry.cpp  InstantiateOdometry.cu  RGBDOdometryCuda.h  RGBDOdometryCudaDevice.cuh  RGBDOdometryCudaHost.hpp  RGBDOdometryCudaKernel.cuh
src/Cuda/Registration/: CorrespondenceSetCudaHost.hpp  FastGlobalRegistrationCuda.h  FastGlobalRegistrationCudaHost.hpp  FastGlobalRegistrationCudaKernel.cuh  RegistrationCuda.h  RegistrationCudaHost.hpp  RegistrationCudaKernel.cuh
src/Cuda/Visualization/Shader/: PhongShaderCuda.cpp
src/Cuda/Visualization/Utility/: DrawGeometryWithCudaModule.cpp
src/Cuda/Visualization/Visualizer/: VisualizerWithCudaModule.cpp  VisualizerWithCudaModule.h
src/Open3D/: CMakeLists.txt
src/Open3D/Camera/: PinholeCameraParameters.h
src/Open3D/Container/: Array.h  CMakeLists.txt  MemoryManager.h  Shape.h  Tensor.h  TensorBuffer.h
src/Open3D/Core/: CMakeLists.txt  MemoryManager.h  MemoryManagerCUDA.cu  PointCloudTL.cpp  PointCloudTL.h  Tensor.cpp  Tensor.h  TensorList.h
src/Open3D/Core/Hashmap/: .#HashmapCUDAImpl.cuh  .#HashmapCUDAImpl.h  .#TensorHashCUDA.cu  .#slab_alloc.h  Consts.h  Hashmap.cpp  Hashmap.cu  Hashmap.cuh  Hashmap.h  HashmapCPU.cpp  HashmapCPU.h  HashmapCPU.hpp  HashmapCUDA.cu  HashmapCUDA.cuh  HashmapCUDA.h  HashmapCUDAImpl.cuh  HashmapCUDAImpl.h  InternalMemoryManager.h  InternalNodeManager.h  TemplateHashmap.h  TensorHash.cpp  TensorHash.h  TensorHashCPU.cpp  TensorHashCUDA.cu  TestHashmap.cu  Types.h  allocator.h  cuda_unordered_map.h  custom_class.h  memory_alloc.h  slab_alloc.h  slab_hash.h  test_func.cu  test_func_lib.h  test_hashmap.cu  test_tensorhash.cpp  test_tensorhash.cu
src/Open3D/Core/Hashmap/CUDA/: HashmapCUDA.cuh
src/Open3D/Geometry/: BoundingVolume.cpp  BoundingVolume.h  Geometry.h
src/Open3D/IO/FileFormat/: FileLOG.cpp
src/Open3D/Integration/: ScalableTSDFVolume.cpp  ScalableTSDFVolume.h  TSDFVolume.h  UniformTSDFVolume.cpp  UniformTSDFVolume.h
src/Open3D/Registration/: GlobalOptimization.cpp  PoseGraph.h  Registration.h
src/Open3D/Utility/: Eigen.h
src/Open3D/Visualization/Visualizer/: Visualizer.cpp  Visualizer.h  VisualizerWithEditing.cpp  VisualizerWithVertexSelection.cpp
src/Python/open3d/: __init__.py  core.py
src/Python/open3d_pybind/core/: container.h  pointcloud_tl.cpp
src/Python/open3d_pybind/integration/: integration.cpp
src/Tools/ManuallyAlignPointCloud/: AlignmentSession.h
src/UnitTest/: CMakeLists.txt
src/UnitTest/Container/: Tensor.cpp
src/UnitTest/Cuda/Container/: TestArrayCuda.cpp  TestHashTableCuda.cpp  TestLinkedListCuda.cpp  TestTransformCuda.cpp
src/UnitTest/Cuda/Geometry/: CMakeLists.txt  TestImageCuda.cpp  TestNNCuda.cpp  TestRGBDImageCuda.cpp
src/UnitTest/Cuda/Integration/: TestScalableTSDFVolumeCuda.cpp  TestUniformTSDFVolumeCuda.cpp
src/UnitTest/Cuda/Odometry/: TestReduction2DCuda.cpp
src/UnitTest/Python/: test_core.py
src/UnitTest/Utility/: Console.cpp
(+150 files in other folders)
